# fluxo-agil-api

./: Dockerfile  README.md  docker-compose.yml  init.sh  insomnia.json  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: README  env.py
alembic/versions/: 2023021110_create_core_models_ed9f7e9b1283.py  2023021707_create_core_models_fa87e329aa34.py  2023031542_create_core_models_db87dcf0e886.py  2023032129_create_core_models_603c31feb2e6.py
app/: crud.py  database.py  initial_data.py  main.py  models.py  scraper.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  components.py  curricula.py  departments.py  programs.py  users.py
app/crud/: department.py
app/db/: component.py  curriculum.py  department.py  program.py
app/models/: orm.py  pydantic.py
app/schemas/: requests.py  responses.py
app/scraper/: components.py  constants.py  courses.py  curricula.py  departments.py  main.py  programs.py  utils.py
app/scraper/models/: component.py
app/tests/: conftest.py  test_auth.py  test_users.py
sql/: crud.py  database.py  main.py
