[tool.poetry]
name = "fluxo-agil-api"
version = "0.1.0"
description = "Fluxo Ágil's API"
authors = ["Irwin Schmitt <irwinschmitt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
